Fixed x-axis whitespace mobile and browserrouter baseurl

--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,13 @@
+body {
+  width:100%;
+  overflow-x:hidden;
+}
+
 .App {
   text-align: center;
   background-color: #1f2229;
+  width:100%;
+  overflow-x:hidden;
 }
 
 .App-header {
